# advent-of-code-24

./: README.md
advent-of-code-24/: Cargo.toml  Makefile
advent-of-code-24/src/day1/part1/: main  main.rs  problem_statement.md
advent-of-code-24/src/day1/part2/: main.rs  problem_statement.md
advent-of-code-24/src/day2/part1/: main.rs
advent-of-code-24/src/day2/part2/: main.rs  problem_statement.md
advent-of-code-24/src/day3/part1/: main.rs  run.py
advent-of-code-24/src/day3/part2/: main.rs
advent-of-code-24/src/day4/part1/: input.txt  main.rs
advent-of-code-24/src/day4/part2/: main.py  main.rs
advent-of-code-24/src/day5/part1/: main.py
advent-of-code-24/src/day5/part2/: input.txt  main.py
advent-of-code-24/src/day6/part1/: main.py  main.rs
advent-of-code-24/src/day7/: input.txt  main.rs
