[package]
name = "advent-of-code-24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day1_part1"
path = "src/day1/part1/main.rs"

[[bin]]
name = "day1_part2"
path = "src/day1/part2/main.rs"

[[bin]]
name = "day2_part1"
path = "src/day2/part1/main.rs"

[[bin]]
name = "day2_part2"
path = "src/day2/part2/main.rs"