[package]
name = "advent-of-code-24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11.1"

[[bin]]
name = "day1_part1"
path = "src/day1/part1/main.rs"

[[bin]]
name = "day1_part2"
path = "src/day1/part2/main.rs"

[[bin]]
name = "day2_part1"
path = "src/day2/part1/main.rs"

[[bin]]
name = "day2_part2"
path = "src/day2/part2/main.rs"

[[bin]]
name = "day3_part1"
path = "src/day3/part1/main.rs"

[[bin]]
name = "day3_part2"
path = "src/day3/part2/main.rs"

[[bin]]
name = "day4_part1"
path = "src/day4/part1/main.rs"

[[bin]]
name = "day4_part2"
path = "src/day4/part2/main.rs"

[[bin]]
name = "day5_part1"
path = "src/day5/part1/main.rs"

[[bin]]
name = "day6_part1"
path = "src/day6/part1/main.rs"

[[bin]]
name = "day7"
path = "src/day7/main.rs"